fix buttons on ios

--- a/app/javascript/css/application.scss
+++ b/app/javascript/css/application.scss
@@ -12,6 +12,8 @@ input[type="datetime-local"],
 select,
 textarea,
 .button {
+  -webkit-appearance: none;
+  appearance: none;
   border: 1px solid #777;
   padding: 0.5rem;
   border-radius: 5px;
